# eventflux

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .taplo.toml  .typos.toml  CONTRIBUTING.md  Cargo.toml  DEV_GUIDE.md  Dockerfile  README.md  ROADMAP.md  build.rs  cliff.toml  justfile
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: deploy-docs.yml  docker-publish.yml  perf-nightly.yml  rust.yml  stale-prs.yml  studio.yml
benches/: lock_contention_bench.rs
config/: example.toml
docs/: writing_extensions.md
examples/: file.eventflux  http.eventflux  kafka.eventflux  rabbitmq.eventflux  rabbitmq_to_log.eventflux
feat/connector-infra/: README.md
feat/file/: README.md
feat/http/: README.md
feat/kafka/: README.md
feat/rabbitmq/: README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_sql_parser.rs
proto/: transport.proto
src/: lib.rs
src/core/: data_source.rs  eventflux_app_runtime.rs  eventflux_app_runtime_builder.rs  eventflux_manager.rs  mod.rs  store.rs
src/core/aggregation/: aggregation_input_processor.rs  aggregation_runtime.rs  base_incremental_value_store.rs  incremental_data_aggregator.rs  incremental_data_purger.rs  incremental_executor.rs  incremental_executors_initialiser.rs  mod.rs
src/core/config/: element_config_resolver.rs  error.rs  eventflux_app_context.rs  eventflux_context.rs  eventflux_on_demand_query_context.rs  eventflux_query_context.rs  loader.rs  manager.rs  mod.rs  monitoring.rs  override_utils.rs  processor_config_reader.rs  resolver.rs  security.rs  service_discovery.rs  statistics_configuration.rs  stream_config.rs  toml_config.rs  validation_api.rs  validator.rs
src/core/config/types/: metadata.rs  (+5 more)
src/core/debugger/: mod.rs
src/core/distributed/: coordinator.rs  distributed_runtime.rs  message_broker.rs  mod.rs  processing_engine.rs  runtime_mode.rs  state_backend.rs  transport.rs
src/core/error/: config.rs  dlq.rs  handler.rs  integration.rs  mod.rs  retry.rs  source_support.rs  strategy.rs
src/core/event/: complex_event.rs  event.rs  mod.rs  value.rs
src/core/exception/: error.rs  mod.rs
src/core/executor/: case_executor.rs  cast_executor.rs  collection_aggregation_executor.rs  constant_expression_executor.rs  event_variable_function_executor.rs  expression_executor.rs  indexed_variable_executor.rs  mod.rs  multi_value_variable_function_executor.rs  variable_expression_executor.rs
src/core/extension/: example_factories.rs  mod.rs
src/core/function/: mod.rs  script.rs
src/core/partition/: mod.rs  parser.rs
src/core/persistence/: data_source.rs  mod.rs  persistence_store.rs  snapshot_service.rs  state_holder.rs  state_manager.rs  state_registry.rs
src/core/query/: mod.rs  query_runtime.rs
src/core/stream/: connector_util.rs  http_common.rs  junction_factory.rs  kafka_common.rs  mod.rs  service_deployment_info.rs  stream_initializer.rs  stream_junction.rs
src/core/table/: cache_table.rs  jdbc_table.rs  mod.rs
src/core/trigger/: mod.rs  trigger_runtime.rs
src/core/util/: attribute_converter.rs  audit.rs  compliance_util.rs  compression.rs  event_serde.rs  event_serialization.rs  eventflux_constants.rs  executor_service.rs  health.rs  id_generator.rs  lock.rs  metrics.rs  mod.rs  scheduled_executor_service.rs  scheduler.rs  serialization.rs  shutdown.rs  snapshot.rs  statistics.rs  thread_barrier.rs  type_system.rs  type_system_tests.rs
src/core/validation/: circular_dependency.rs  dlq_validation.rs  mod.rs  query_helpers.rs
src/core/window/: mod.rs  window_runtime.rs
src/query_api/: annotation.rs  constants.rs  error.rs  eventflux_app.rs  eventflux_element.rs  mod.rs
src/query_api/aggregation/: mod.rs  time_period.rs  within.rs
src/query_api/definition/: abstract_definition.rs  aggregation_definition.rs  attribute.rs  function_definition.rs  mod.rs  stream_definition.rs  table_definition.rs  trigger_definition.rs  window_definition.rs
src/query_api/execution/: execution_element.rs  mod.rs
src/query_api/expression/: attribute_function.rs  case.rs  cast.rs  expression.rs  indexed_variable.rs  mod.rs  variable.rs
src/sql_compiler/: application.rs  catalog.rs  converter.rs  error.rs  expansion.rs  mod.rs  normalization.rs  pattern_validation.rs  type_inference.rs  type_mapping.rs  with_clause.rs
tests/: advanced_window_tests.rs  aggregator_window.rs  alias_comprehensive_tests.rs  app_runner_aggregations.rs  app_runner_async_junction.rs  app_runner_async_pool_stress.rs  app_runner_case_expression.rs  app_runner_event_ser.rs  app_runner_functions.rs  app_runner_joins.rs  app_runner_output_rate.rs  app_runner_partition_stress.rs  app_runner_partitions.rs  app_runner_patterns.rs  app_runner_persistence.rs  app_runner_selector.rs  app_runner_start_stop.rs  app_runner_stress.rs  app_runner_tables.rs  app_runner_triggers.rs  app_runner_windows.rs  async_annotation_tests.rs  builtin_function_parsing.rs  cache_table.rs  collection_aggregation_integration.rs  collection_aggregation_registry.rs  compare_expression.rs  compatibility_tests.rs  data_source_init.rs  distributed_grpc_integration.rs  distributed_redis_state.rs  distributed_tcp_integration.rs  dynamic_ext_integration.rs  error_handling_integration_tests.rs  error_routing.rs  event_chain_clone.rs  expression_parser_complex.rs  extensions.rs  file_integration.rs  file_persistence.rs  (+53 more)
tests/common/: mod.rs  pattern_chain_test_utils.rs
tests/compatibility/: aggregations.rs  filters.rs  joins.rs  mod.rs  partitions.rs  patterns.rs  tables.rs  triggers.rs  windows.rs
tests/compatibility/functions/: arithmetic.rs  case_expressions.rs  cast_functions.rs  combined.rs  math_functions.rs  mod.rs  string_functions.rs  utility_functions.rs
tests/custom_dyn_ext/: Cargo.toml
tests/custom_dyn_ext/src/: lib.rs
website/: sidebars.js
website/docs/architecture/: state-management.md
website/docs/connectors/: file.md  http.md  kafka.md  mappers.md  overview.md  rabbitmq.md  websocket.md
website/docs/getting-started/: installation.md  running.md
(+250 files in other folders)
