[package]
name = "eventflux"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/eventflux-io/eventflux"
homepage = "https://eventflux.io"
documentation = "https://eventflux.io/docs"
build = "build.rs"

[package.metadata.cargo-machete]
# consul, etcd-rs, vault: feature-gated optional deps
# tokio-stream: used by tonic-generated gRPC code (codegen import)
# tower: transitive dep required by tonic runtime
ignored = ["consul", "etcd-rs", "tokio-stream", "tower", "vault"]

[features]
default = []
perf-tests = []
kubernetes = ["kube", "k8s-openapi", "base64"]
consul = ["dep:consul"]
etcd = ["etcd-rs"]
vault = ["dep:vault"]
cloud-native = ["kubernetes", "consul", "etcd", "vault"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
base64 = { version = "0.22", optional = true }
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
consul = { version = "0.4", optional = true }
cron = "0.11"
crossbeam = "0.8"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
dashmap = "6.0"
deadpool-redis = "0.18"
dirs = "5.0"
env_logger = "0.11"
etcd-rs = { version = "1.0", optional = true }
futures = "0.3"
k8s-openapi = { version = "0.20", features = ["v1_28"], optional = true }
kube = { version = "0.87", features = ["runtime", "derive"], optional = true }
lapin = "2.3"
libloading = "0.8"
log = "0.4"
lz4 = "1.24"
num_cpus = "1"
once_cell = "1"
prost = "0.12"
rand = "0.8"
rayon = "1"
redis = { version = "0.27", features = ["aio", "tokio-comp", "connection-manager"] }
regex = "1"
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

# Configuration management dependencies
serde_yaml = "0.9"
snap = "1.1"
# Using EventFlux fork with streaming SQL extensions
sqlparser = { path = "vendor/datafusion-sqlparser-rs" }
thiserror = "1.0"
thread_local = "1.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
toml = "0.8"
tonic = { version = "0.11", features = ["tls"] }
tower = "0.4"
tungstenite = "0.24"
urlencoding = "2.1"
uuid = { version = "1", features = ["v4"] }
vault = { version = "10.1", optional = true }
zstd = "0.13"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
custom_dyn_ext = { path = "tests/custom_dyn_ext" }
serial_test = "3.0"
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }

[[bench]]
name = "lock_contention_bench"
harness = false

