[package]
name = "eventflux"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/eventflux-io/eventflux"
homepage = "https://eventflux.io"
documentation = "https://eventflux.io/docs"
build = "build.rs"

[package.metadata.cargo-machete]
# consul, etcd-rs, vault: feature-gated optional deps
# tokio-stream: used by tonic-generated gRPC code (codegen import)
# tower: transitive dep required by tonic runtime
ignored = ["consul", "etcd-rs", "tokio-stream", "tower", "vault"]

[features]
default = []
perf-tests = []
kubernetes = ["kube", "k8s-openapi", "base64"]
consul = ["dep:consul"]
etcd = ["etcd-rs"]
vault = ["dep:vault"]
cloud-native = ["kubernetes", "consul", "etcd", "vault"]

[dependencies]
async-trait = "0.1"
base64 = { version = "0.22", optional = true }
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
consul = { version = "0.4", optional = true }
cron = "0.11"
crossbeam = "0.8"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
dashmap = "6.0"
deadpool-redis = "0.18"
dirs = "5.0"
env_logger = "0.11"
etcd-rs = { version = "1.0", optional = true }
futures = "0.3"
k8s-openapi = { version = "0.20", features = ["v1_28"], optional = true }
kube = { version = "0.87", features = ["runtime", "derive"], optional = true }
lapin = "2.3"
libloading = "0.8"
log = "0.4"
lz4 = "1.24"
num_cpus = "1"
once_cell = "1"
prost = "0.12"
rand = "0.8"
rayon = "1"
redis = { version = "0.27", features = ["aio", "tokio-comp", "connection-manager"] }
regex = "1"
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

# Configuration management dependencies
serde_yaml = "0.9"
snap = "1.1"
# Using EventFlux fork with streaming SQL extensions
sqlparser = { path = "vendor/datafusion-sqlparser-rs" }
thiserror = "2.0"
thread_local = "1.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
toml = "0.8"
tonic = { version = "0.11", features = ["tls"] }
tower = "0.4"
tungstenite = "0.24"
urlencoding = "2.1"
uuid = { version = "1", features = ["v4"] }
vault = { version = "10.1", optional = true }
zstd = "0.13"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
custom_dyn_ext = { path = "tests/custom_dyn_ext" }
serial_test = "3.0"
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
enum_glob_use = "allow"
# Documentation lints — address incrementally
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
# Cast lints — common in systems/numeric code
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
# Style lints — subjective or too noisy for existing codebase
assigning_clones = "allow"
bool_to_int_with_if = "allow"
default_trait_access = "allow"
doc_link_with_quotes = "allow"
explicit_into_iter_loop = "allow"
explicit_iter_loop = "allow"
float_cmp = "allow"
fn_params_excessive_bools = "allow"
if_not_else = "allow"
implicit_hasher = "allow"
items_after_statements = "allow"
manual_let_else = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
match_wildcard_for_single_variants = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
redundant_closure_for_method_calls = "allow"
redundant_else = "allow"
ref_option_ref = "allow"
semicolon_if_nothing_returned = "allow"
similar_names = "allow"
single_char_pattern = "allow"
single_match_else = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_many_lines = "allow"
trivially_copy_pass_by_ref = "allow"
uninlined_format_args = "allow"
unnecessary_wraps = "allow"
unnested_or_patterns = "allow"
unreadable_literal = "allow"
unused_async = "allow"
unused_self = "allow"
used_underscore_binding = "allow"
wildcard_imports = "allow"
# Additional pedantic lints — fix incrementally
checked_conversions = "allow"
ignored_unit_patterns = "allow"
implicit_clone = "allow"
missing_fields_in_debug = "allow"
option_as_ref_cloned = "allow"
unchecked_duration_subtraction = "allow"
unnecessary_literal_bound = "allow"
used_underscore_items = "allow"
stable_sort_primitive = "allow"
ref_option = "allow"
inefficient_to_string = "allow"
manual_string_new = "allow"
match_on_vec_items = "allow"
needless_raw_string_hashes = "allow"
# Nursery lints — suppressed because nursery is warn-level
option_if_let_else = "allow"

[profile.release]
lto = true
codegen-units = 1

[[bench]]
name = "lock_contention_bench"
harness = false
